Fix: width login wrap

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -15,8 +15,8 @@
     // background: #ebeeef;
       
   .wrap-login100 {
-    width: 500px;
-    height: 610px;
+    width: 600px;
+    height: 500;
     margin: 0 auto;
     // background: #fff;
     background: #ADA996;  /* fallback for old browsers */
